added dynamic content

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <!-- 
     - google font link
   -->
+  <script src="https://kit.fontawesome.com/be6096eae4.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
